--- a/style.css
+++ b/style.css
@@ -372,7 +372,7 @@ header .navbar a:hover{
   gap:1.5rem;
   min-height: 100vh;
   align-items: center;
-  background:url(../images/back_home.png) no-repeat;
+  background:url(./images/back_home.png) no-repeat;
   background-size: cover;
   background-position: center;
   box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.6);
@@ -487,7 +487,7 @@ header .navbar a:hover{
 }
 
 .speciality.speciality{
-  background:url(/images/roadmap_bg.jpg);
+  background:url(./images/roadmap_bg.jpg);
 }
 
 .speciality .noticia {
@@ -571,7 +571,7 @@ header .navbar a:hover{
 }*/
 
 .popular.popular{
- background:url(/images/market.png);
+ background:url(./images/market.png);
 
 }
 
@@ -622,7 +622,7 @@ header .navbar a:hover{
 }
 
 .step.step {
-  background:url(/images/market.png);
+  background:url(./images/market.png);
 
 }
 
