--- a/team.css
+++ b/team.css
@@ -140,6 +140,18 @@
     
   }
 
+  .row .none {
+    padding: 10px;
+    margin: 8px 10px;
+    position: relative;
+    width:calc(25% - 20px) ;
+    min-height: 400px;
+  
+    float: left;
+    box-sizing: border-box;
+    overflow: hidden;
+  }
+
 
 
 @media (max-width:992px){
@@ -161,12 +173,18 @@
     
     }
 
+.row .none {
+    width:calc(50% - 20px) ;
+    min-height: 600px;
+    }
+    
+
     
     
 
 }
 
-@media (max-width:600px){
+@media (max-width:720px){
     .containerT {
         width: 90%;
         margin: 20px auto;
@@ -176,6 +194,9 @@
         margin-left: 30px;
         width:calc(100% - 20px) ;
         
+    }
+    .row .none {
+        display: none;
     }
 
   
