--- a/style.css
+++ b/style.css
@@ -636,9 +636,9 @@ header .navbar a:hover{
   padding:1rem .1rem;
 }
 
+/* START TOKENOMICS */
 .step.step {
   background:url(./images/market.png);
-
 }
 
 .steps{
@@ -672,7 +672,7 @@ header .navbar a:hover{
 }
 .steps .box p{
   font-size: 1.8rem;
-  color:rgb(175, 171, 171);
+  color:rgb(236, 242, 232);
   padding:1rem;
 }
 .steps .box li{
@@ -680,6 +680,9 @@ header .navbar a:hover{
   color:rgb(135, 133, 248);
   padding:1rem;
 }
+
+/* END TOKENOMICS */
+
 /*start ROADMAP*/
 .gallery {
   background: url(./images/roadmap_bg.jpg);
@@ -723,7 +726,7 @@ header .navbar a:hover{
 }
 
 h1 {
-  color: beige;
+  color: rgb(255, 255, 255);
   margin: 50px;
 }
 
@@ -732,45 +735,6 @@ h1 {
 }
 
 /*end ROADMAP*/
-
-/*start NTF ITEM*/
-.Box {
-  background-color: none;
-  color: rgb(255, 255, 255);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 400px;
-  height: 380px;
-  margin: 10px;
-  border-radius: 10px;
-  box-shadow:none;
-  transform: translateX(400%);
-  transition: transform 0.4s ease;
-}
-.Box:hover {
-  background-color: rgb(181, 177, 177);
-  border: 1px solid #c5c2c2;
-  color: rgb(0, 0, 0);
-}
-
-.Box:nth-of-type(even) {
-  transform: translateX(-400%);
-}
-
-.Box.show {
-  transform: translateX(0);
-}
-
-h1 {
-  color: beige;
-  margin: 50px;
-}
-
-.Box h2 {
-  font-size: 45px;
-}
-/*end NFT ITEM*/
 
 /*start GAMEPLAY*/
 :root .popular{
@@ -932,55 +896,77 @@ body .popular {
   }
 }
 
-/*end GAMEPLAY*/
+/*ENDd GAMEPLAY*/
+
+/*START NFT ITEMS*/
+.gallerys {
+  background: url(./images/roadmap_bg.jpg);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  overflow-x: hidden;
+  z-index: 2;
+  box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.6);
+}
 
 
-.gallery .box-container{
+.gallerys .box-container{
   display: flex;
   flex-wrap: wrap;
   gap:1.5rem;
 }
 
-.gallery .box-container .box{
+.gallerys .box-container .box{
   height:40rem;
   flex:1 1 20rem;
-  border:1rem solid rgb(88, 185, 192);
   box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
   border-radius: .5rem;
   position: relative;
   overflow: hidden;
 }
 
-.gallery .box-container .box img{
+.gallerys .box-container .box img{
   height:100%;
   width:100%;
   object-fit: cover;
 }
 
-.gallery .box-container .box .content{
+.gallerys .box-container .box .content{
   position: absolute;
   top:-100%; left:0;
   height: 100%;
   width:100%;
-  background:rgba(255,255,255,.9);
+  background:none;
   padding:2rem;
   padding-top: 5rem;
   text-align: center;
 }
 
-.gallery .box-container .box .content h3{
+.gallerys .box-container .box .content h3{
   font-size: 2.5rem;
-  color:#333;
+  color:rgb(13, 221, 183);
 }
 
-.gallery .box-container .box .content p{
+.gallerys .box-container .box .content p{
   font-size: 1.5rem;
-  color:#666;
+  color:rgb(10, 213, 248);
   padding:1rem 0;
 }
 
-.gallery .box-container .box:hover .content{
+.gallerys .box-container .box:hover .content{
   top:0;
+}
+
+/*END NFT ITEMS*/
+
+/*START TEAM*/
+
+.review {
+  background:url(./images/market.png);
 }
 
 .review .box-container{
@@ -1026,6 +1012,8 @@ body .popular {
   color:#eee;
   padding:1rem 0;
 }
+
+/*END TEAM*/
 
 .order .row{
   padding:2rem;
@@ -1139,18 +1127,6 @@ body .popular {
 .loader-container.fade-out{
   top:-120%;
 }
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
