--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ html{
 }
 
 body{
-  background:#f7f7f7;
+  min-height: 100vh;
 }
 
 section{
@@ -349,6 +349,12 @@ header{
   box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
 }
 
+header .logo img{
+ position: relative;
+ top: 6px;
+ right: -5px;
+}
+
 header .logo{
   font-size: 2.5rem;
   font-weight: bolder;
@@ -651,41 +657,37 @@ header .navbar a:hover{
 .steps .box{
   flex:1 1 25rem;
   padding:1rem;
-  text-align: center;
+
 }
 
 .steps .box img{
+  float: right;
   border-radius: 50%;
   border:1rem solid rgb(187, 184, 184);
-  box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+
 }
 
 .steps .box h3{
+  text-align: left;
   font-size: 3rem;
-  color:rgb(255, 253, 253);
+  color:rgb(255, 255, 255);
   padding:1rem;
 }
-.steps .box h4{
-  font-size: 3rem;
-  color:rgb(92, 89, 89);
-  padding:1rem;
-}
+
 .steps .box p{
-  font-size: 1.8rem;
-  color:rgb(236, 242, 232);
-  padding:1rem;
-}
-.steps .box li{
-  font-size: 1.5rem;
-  color:rgb(135, 133, 248);
-  padding:1rem;
+  text-align: left;
+  font-family: 'Saira Semi Condensed', sans-serif;
+  font-size: 1.7rem;
+  color:rgb(255, 255, 255);
+  padding:1rem 2;
+  
 }
 
 /* END TOKENOMICS */
 
 /*start ROADMAP*/
 .gallery {
-  background: url(./images/roadmap_bg.jpg);
+  background: url(./images/market.png);
   width: 100%;
   height: 100%;
   display: flex;
@@ -697,7 +699,7 @@ header .navbar a:hover{
   z-index: 2;
   box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.6);
 }
-.vox {
+/*.vox {
   background-color: none;
   color: rgb(255, 255, 255);
   display: flex;
@@ -732,8 +734,94 @@ h1 {
 
 .vox h2 {
   font-size: 45px;
+}*/
+
+.gallery .resume{
+  background: #474747;
 }
 
+.gallery .resume .title-small p::before {
+  content: '';
+  width: 32px;
+  height: 1px;
+  background: #fff;
+  position: absolute;
+  left: 45px;
+  top: 12px;
+}
+
+.gallery .title-small p::after {
+  content: '';
+  width: 32px;
+  height: 1px;
+  background: #fff;
+  position: absolute;
+  top: 12px;
+  right: 47px;
+}
+
+.resume-content {
+  width:100%;
+  padding: 0 20px;
+}
+
+.gallery .resume-header {
+  padding-bottom: 16px;
+}
+
+.gallery .education, .experience {
+  position: center;
+  border-left: 1px solid #999;
+  padding-top: 20px;
+  margin-top: 20px;
+}
+
+.gallery .resume-item {
+  margin-bottom: 24px;
+  margin-left: 20px;
+  position: relative;
+}
+.gallery .resume-item ul{
+ color: #fff;
+}
+
+.gallery .resume-item::before {
+  content: '';
+  width: 14px;
+  height: 14px;
+  background: #fff;
+  position: absolute;
+  left: -27px;
+  border-radius: 20px;
+  top: 6px;
+}
+
+.gallery .res-title {
+  font-weight: 700;
+  font-size: 24px;
+  padding: 5px 0px;
+}
+
+.gallery .res-year {
+  background: #fff;
+  width: 100px;
+  text-align: center;
+  color: #000;
+  padding: 2px 0px;
+  margin-bottom: 6px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+}
+
+.gallery .res-year::before {
+  content: '';
+  width: 38px;
+  height: 1px;
+  background: #fff;
+  position: absolute;
+  top: 12px;
+  left: -25px;
+}
 /*end ROADMAP*/
 
 /*start GAMEPLAY*/
@@ -743,6 +831,9 @@ h1 {
   --hover-width: 75%;
   --other-width: 25%;
   --speed: 1000ms;
+}
+.popular.popular {
+  background: url(./images/market.png);
 }
 body .popular {
   font-family: 'Roboto', sans-serif;
@@ -821,7 +912,7 @@ body .popular {
   position: relative;
   width: 100%;
   height: 100%;
-  background: #333;
+  
 }
 
 .split {
@@ -836,6 +927,11 @@ body .popular {
   background: url('./images/ps.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+
+  
+  padding: 20px 0;
+  height: 60vh;
+  
 }
 
 .split.left::before {
@@ -843,7 +939,6 @@ body .popular {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: var(--left-bg-color);
 }
 
 .split.right {
@@ -851,6 +946,9 @@ body .popular {
   background: url('./images/xbox.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+
+  padding: 20px 0;
+  height: 60vh;
 }
 
 .split.right::before {
@@ -858,7 +956,6 @@ body .popular {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: var(--right-bg-color);
 }
 
 .split.right,
@@ -1015,62 +1112,72 @@ body .popular {
 
 /*END TEAM*/
 
-.order .row{
-  padding:2rem;
-  box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
-  background:#fff;
-  display: flex;
+/*START PARTNER*/
+
+.order.order{
+  background: url(./images/roadmap_bg.jpg);
+  
+}
+.order{
+  font-family: 'open sans';
+}
+
+.contenedor-imagenes{  
+  display:flex;
+  margin: auto;
+  justify-content: space-around;
   flex-wrap: wrap;
-  gap:1.5rem;
-  border-radius: .5rem;
+  border-radius:3px;
+  gap: 60px;
 }
 
-.order .row .image{
-  flex:1 1 30rem;
+
+.imagen img{
+  width:330px;
+  height:77px;
+  float:left;
+   margin:10px 10px 0 0;
 }
 
-.order .row .image img{
-  height: 100%;
-  width:100%;
-  object-fit: cover;
-  border-radius: .5rem;
+.overlay{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background:rgba(0, 0, 0, 0.781) ;
+  width: 100%;
+  height: 0;
+  overflow: hidden;
+  transition: .5s ease;
 }
 
-.order .row form{
-  flex:1 1 50rem;
-  padding:1rem;
+@media screen and (max-width:1000px){
+  .contenedor-imagenes{
+      width: 95%;
+  }
 }
 
-.order .row form .inputBox{
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+@media screen and (max-width:700px){
+  .contenedor-imagenes{
+      width: 90%;
+  }
+  .contenedor-imagenes .imagen{
+      width: 48%;
+  }
 }
 
-.order .row form .inputBox input, .order .row form textarea{
-  padding:1rem;
-  margin:1rem 0;
-  font-size: 1.7rem;
-  color:#333;
-  text-transform: none;
-  border:.1rem solid rgba(0,0,0,.3);
-  border-radius: .5rem;
-  width:49%;
+@media screen and (max-width:450px){
+  h1{
+      font-size:22px;
+  }
+  .contenedor-imagenes{
+      width: 98%;
+  }
+  .contenedor-imagenes .imagen{
+      width: 80%;
+  }
 }
 
-.order .row form textarea{
-  width:100%;
-  resize: none;
-  height:15rem;
-}
-
-.order .row form .btn{
-  background:none;
-}
-
-.order .row form .btn:hover{
-  background:var(--red);
-}
+/*END PARTNER*/
 
 .footer{
   background:#000;
