--- a/team.css
+++ b/team.css
@@ -47,7 +47,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgb(198, 9, 236);
+    background: rgba(0,178,255,1);
     z-index: 1;
     transition: .5s;
     mix-blend-mode: soft-light;
@@ -70,7 +70,7 @@
 
 
 .centerT{
-    margin-top: 80px;
+    margin-top: 20px;
    
   
 }
@@ -90,7 +90,7 @@
 
 .row .columm:hover .imgBox img{
     width: 100%;
-    transform: scale(1.5);
+    transform: scale(1.2);
 }
 .row .columm .details{
     position: absolute;
@@ -116,7 +116,7 @@
 
 .row .columm .details span {
    
-    color: rgb(198, 9, 236);
+    color: rgba(0,178,255,1);
     font-size: 12px;
 }
 
@@ -152,8 +152,34 @@
     box-sizing: border-box;
     overflow: hidden;
   }
+  @media (max-width:1030px){
+    .row .columm{
+        
+        width:calc(50% - 20px) ;
+        
+        
+    }
+    
+.row .none {
+    width:calc(30% - 20px) ;
+    min-height: 400px;
+    }
+  }
 
 
+  @media (max-width:1370px){
+    .row .columm{
+        
+        width:calc(30% - 20px) ;
+        
+        
+    }
+    
+.row .none {
+    width:calc(30% - 20px) ;
+    min-height: 400px;
+    }
+  }
 
 @media (max-width:992px){
     .containerT {
