discord, trailer, tokenomics, partner

--- a/style.css
+++ b/style.css
@@ -86,6 +86,11 @@ main {
   box-shadow: 0 0 20px #1da1f2;
 }
 
+.icon:hover:nth-child(5) {
+  background-color: #6907ca;
+  box-shadow: 0 0 20px #6907ca;
+}
+
 .icon i {
   color: #fff;
   position: absolute;
@@ -537,7 +542,7 @@ header .navbar a:hover {
 /*START HISTORY*/
 
 .speciality.speciality {
-  background: url(./images/roadmap_bg.jpg);
+  background: url(./images/market.png);
 }
 
 .speciality .box-container {
@@ -622,7 +627,6 @@ header .navbar a:hover {
 /* START TOKENOMICS */
 .step.step {
   background: url(./images/nave2.png);
-  min-height: 100vh;
   box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.6);
 }
 
@@ -635,27 +639,23 @@ header .navbar a:hover {
 
 .steps .box {
   flex: 1 1 25rem;
-  padding: 1rem;
+  padding: 5px;
 }
 
 .steps .box .img1 {
   width: 50%;
-  height: 60%;
+  height: 70%;
   float: right;
 }
 
 .steps .box img {
   position: relative;
-  top: -5em;
+  top: -4em;
   padding: 10px;
-  margin: 120px; 
+ 
   
   float: right; 
  
-  
-
-  border-radius: 50%;
-  border: 0.5rem solid rgb(187, 184, 184);
 }
 
 .steps .box .glit h3 {
@@ -699,7 +699,6 @@ header .navbar a:hover {
   margin: 0;
   overflow-x: hidden;
   z-index: 2;
-  box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.6);
 }
 /*.vox {
   background-color: none;
@@ -960,7 +959,6 @@ body .popular {
 
 .split.left {
   left: 0;
-  background: url("./images/Grimer\ Vs\ Todos.png");
   background-repeat: no-repeat;
   background-size: cover;
 
@@ -979,7 +977,6 @@ body .popular {
 
 .split.right {
   right: 0;
-  background: url("./images/Grimer\ Vs\ Todos\ 2\ .png");
   background-repeat: no-repeat;
   background-size: cover;
 
@@ -1171,7 +1168,7 @@ body .popular {
 .order.order {
   padding-top: 40px;
   background-color: black;
-  min-height: 60vh;
+  min-height: 75vh;
 
 }
 
@@ -1202,7 +1199,15 @@ body .popular {
 
 .order .imagen2 img {
   width: 300px;
-  height: 60px;
+  height: 70px;
+  float: right;
+  left: 20px;
+  margin: 10px 10px 0 0;
+}
+
+.order .imagen3 img {
+  width: 300px;
+  height: 50px;
   float: right;
   left: 20px;
   margin: 10px 10px 0 0;
