--- a/team.css
+++ b/team.css
@@ -39,6 +39,7 @@
   float: left;
   box-sizing: border-box;
   overflow: hidden;
+  cursor: pointer;
 }
 .row .columm:before {
   content: "";
@@ -48,7 +49,7 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 178, 255, 1);
-  z-index: 1;
+  z-index: -1;
   transition: 0.5s;
   mix-blend-mode: soft-light;
 }
